--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "Javier Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "install": "^0.13.0",
+    "nodemon": "^2.0.6",
+    "npm": "^6.14.9"
   }
 }
